--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   #  share_apps:
   image_picker:
   animated_theme_switcher:
+  firebase_core:
+  firebase_auth:
+  cloud_firestore:
+  firebase_messaging:
+  firebase_storage:
   flutter_pdfview:
   responsive_framework:
   oktoast:
